[workspace]
members = [
    "crates/squirrel",
    "crates/squirrel_ast",
    "crates/squirrel_common", "crates/squirrel_jit",
    "crates/squirrel_lex",
    "crates/squirrel_parse",
    "crates/squirrel_rt",
    "crates/squirrel_sema",
    "crates/squirrel_tests",
    "crates/squirrel_wasm",
]
resolver = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
