[workspace]
members = [
    "crates/loom",
    "crates/loom_ir",
    "crates/loom_common",
    "crates/loom_lex",
    "crates/loom_parse",
    "crates/loom_rt",
    "crates/loom_sema",
    "crates/loom_tests",
    "crates/loom_wasm", "crates/loom_jit",
]
resolver = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
