[package]
name = "geko_jit"
version = "0.1.0"
edition = "2024"

[dependencies]
geko_common = { path = "../geko_common" }
geko_lex = { path = "../geko_lex" }
geko_ir = { path = "../geko_ir" }
cranelift = "0.125.3"
cranelift-module = "0.125.3"
cranelift-jit = "0.125.3"
cranelift-native = "0.125.3"
cranelift-codegen = "0.125.3"

[target.'cfg(target_os = "android")'.dependencies]
libffi = { version = "5.1.0", features = ["system"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
libffi = { version = "5.1.0" }
