[package]
name = "loom_jit"
version = "0.1.0"
edition = "2024"

[dependencies]
loom_common = { path = "../loom_common" }
loom_lex = { path = "../loom_lex" }
loom_ir = { path = "../loom_ir" }
cranelift = "0.125.3"
cranelift-module = "0.125.3"
cranelift-jit = "0.125.3"
cranelift-native = "0.125.3"
cranelift-codegen = "0.125.3"
libffi = "5.1.0"
