[package]
name = "loom_rt"
version = "0.1.0"
edition = "2024"

[dependencies]
loom_common = { path = "../loom_common" }
loom_lex = { path = "../loom_lex" }
loom_parse = { path = "../loom_parse" }
loom_ir = { path = "../loom_ir" }
loom_sema = { path = "../loom_sema" }
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.18"
rand = "0.10.0"
sysinfo = "0.38.3"
base64 = "0.22.1"
md-5 = "0.11.0"
hex = "0.4.3"
sha2 = "0.11.0"
sha1 = "0.11.0"
camino = "1.2.2"
chrono = "0.4.44"
