[package]
name = "loom_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
insta = "1.46.3"
camino = "1.2.2"
loom_common = { path = "../loom_common" }
loom_lex = { path = "../loom_lex" }
loom_parse = { path = "../loom_parse" }
loom_sema = { path = "../loom_sema" }
loom_ir = { path = "../loom_ir" }
loom_rt = { path = "../loom_rt" }
miette = { version = "7.6.0", features = ["fancy"] }
regex = "1.12.3"
