[package]
name = "squirrel_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
insta = "1.46.3"
camino = "1.2.2"
squirrel_common = { path = "../squirrel_common" }
squirrel_lex = { path = "../squirrel_lex" }
squirrel_parse = { path = "../squirrel_parse" }
squirrel_sema = { path = "../squirrel_sema" }
squirrel_ast = { path = "../squirrel_ast" }
squirrel_rt = { path = "../squirrel_rt" }
squirrel_jit = { path = "../squirrel_jit" }
miette = { version = "7.6.0", features = ["fancy"] }
regex = "1.12.3"
